bk_ida/gobmkida/c2/trymove
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/trymove/src/engine/board.c:985:7: error: use of undeclared identifier 'off_49A4E0'
v14 = off_49A4E0[komaster]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/trymove/src/engine/board.c:1014:7: error: use of undeclared identifier 'off_49A4E0'
v18 = off_49A4E0[komaster]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/trymove/src/obj/1/board.o] Error 1
